--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="inner cover">
+            <div class="inner cover" style="overflow: scroll; max-height: 600px; overflow-x: hidden">
                 <form onsubmit="return false;" class="form-inline" role="form" style="margin-bottom: 20px">
                     <div class="form-group">
                         <label for="inputPassword2" class="sr-only">Password</label>
@@ -46,7 +46,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr style="cursor: pointer" v-for="item in show_data">
+                    <tr style="cursor: pointer" v-for="item in show_data" @click="toDetail(item.server_id, item.role_id)">
                         <td>{{item.server_id}}</td>
                         <td>{{item.role_id}}</td>
                         <td>{{getMoney(item.money)}}</td>
@@ -136,6 +136,9 @@
             },
             toAccount() {
                 window.location.href = "/account"
+            },
+            toDetail(server_id, role_id) {
+                window.location.href = "/templateIndex?role_id=" + role_id + "&server_id=" + server_id;
             }
         }
     })
