--- a/stastics-vue/index.html
+++ b/stastics-vue/index.html
@@ -18,6 +18,7 @@
     </div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="static/js/store.js"></script>
   <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
   <script src="static/js/bootstrap.min.js"></script>
 </html>
