--- a/role.html
+++ b/role.html
@@ -1,17 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Role</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Cover Template for Bootstrap</title>
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/cover.css" rel="stylesheet">
 </head>
-<body>
-    <div id="app">
 
+<body>
+
+<div id="app" class="site-wrapper">
+    <div class="site-wrapper-inner">
+        <div class="cover-container">
+            <div class="masthead clearfix">
+                <div class="inner">
+                    <h3 class="masthead-brand">Data Center</h3>
+                    <ul class="nav masthead-nav">
+                        <li @click="toCharge"><a href="#">Charge</a></li>
+                        <li @click="toAccount"><a href="#">Account</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div v-if="role_data" class="inner cover" style="overflow: scroll; max-height: 600px">
+                <form onsubmit="return false;" class="form-inline" role="form" style="margin-bottom: 20px">
+                    <button @click="onRefresh" class="btn btn-default">refresh</button>
+                </form>
+                <table class="table table-bordered">
+                    <caption>basic info</caption>
+                    <thead>
+                    <tr>
+                        <th>server_id</th>
+                        <th>role_id</th>
+                        <th>name</th>
+                        <th>platform</th>
+                        <th>log_time</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>{{role_data.role.server_id}}</td>
+                        <td>{{role_data.role.role_id}}</td>
+                        <td style="max-width: 100px">{{role_data.role.name}}</td>
+                        <td>{{role_data.role.platform}}</td>
+                        <td>{{formatTime(role_data.role.log_time)}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+
+                <table class="table table-bordered">
+                    <caption>create city</caption>
+                    <thead>
+                    <tr>
+                        <th>x</th>
+                        <th>y</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>{{role_data.create_city.x}}</td>
+                        <td>{{role_data.create_city.y}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+                <table class="table table-bordered">
+                    <caption>charge log</caption>
+                    <thead>
+                    <tr>
+                        <th>charge_rmb</th>
+                        <th>log_time</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr v-for="charge in role_data.charges">
+                        <td>{{charge.rmb}}</td>
+                        <td>{{formatTime(charge.log_time)}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="mastfoot">
+                <div class="inner">
+                    <p>Created by <a href="#">HuSong</a>.</p>
+                </div>
+            </div>
+        </div>
     </div>
-</body>
+</div>
+<script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+<script src="static/js/bootstrap.min.js"></script>
 <script src="static/vue.min.js"></script>
 <script src="static/vue-resource.min.js"></script>
 <script>
-
+    const URL_ACCOUNT = "/api/role_detail";
 </script>
+<script>
+    var vm = new Vue({
+        el: "#app",
+        data: {
+            role_data: null
+        },
+        ready: function () {
+            this.onRefresh();
+        },
+        methods: {
+            onRefresh: function () {
+                var _this = this;
+                this.role_data = {};
+                var role_id = this.getQueryString("role_id");
+                var server_id = this.getQueryString("server_id");
+                if(role_id == null || server_id == null) {
+                    return;
+                }
+                this.$http.post(URL_ACCOUNT, {role_id:role_id, server_id:server_id}).then(function (response) {
+                    _this.role_data = response.body;
+                    _this.onFilter();
+                }, function (response) {
+
+                })
+            },
+            formatTime: function (time) {
+                var date = new Date(time * 1000);
+                var hour = date.getHours();
+                hour = hour < 10 ? "0" + hour : hour.toString();
+                var minutes = date.getMinutes();
+                minutes = minutes < 10 ? "0" + minutes : minutes.toString();
+                var month = date.getMonth() + 1;
+                var day = date.getDate();
+                return month + "-" + day + "    " + hour + ":" + minutes;
+            },
+            total: function () {
+                alert("total is " + this.show_data.length);
+            },
+            onFilter() {
+                if (this.filter == "" || this.filter == null) {
+                    this.show_data = this.charge_data;
+                    return;
+                }
+                try {
+                    var filter = JSON.parse(this.filter);
+                    console.log(filter);
+                    this.show_data = this.charge_data.filter(function (item) {
+                        var condition = true;
+                        for (var k in filter) {
+                            console.log(item[k].toString());
+                            if (item[k].toString() != filter[k].toString()) {
+                                condition = false;
+                            }
+                        }
+                        return condition
+                    });
+                }
+                catch (e) {
+                    alert("filter error");
+                    console.log(e);
+                }
+            },
+            getQueryString: function (name) {
+                var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
+                var r = window.location.search.substr(1).match(reg);
+                if (r != null) return unescape(r[2]);
+                return null;
+            },
+            toCharge: function () {
+                window.location.href = "/";
+            }
+        }
+    })
+</script>
+</body>
 </html>
