--- a/stastics-vue/index.html
+++ b/stastics-vue/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>stastics-vue</title>
     <link rel="stylesheet" href="static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/cover.css">
+    <link rel="stylesheet" href="static/css/dashboard.css">
     <style>
       #app {
         height: 100%;
