--- a/templateIndex.html
+++ b/templateIndex.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,170 +7,234 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Cover Template for Bootstrap</title>
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>Dashboard Template for Bootstrap</title>
+
+    <!-- Bootstrap core CSS -->
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/css/cover.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="static/css/dashboard.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+
+    <!--[if lt IE 9]>
+    <![endif]-->
 </head>
 
 <body>
 
-<div id="app" class="site-wrapper">
-    <div class="site-wrapper-inner">
-        <div class="cover-container">
-            <div class="masthead clearfix">
-                <div class="inner">
-                    <h3 class="masthead-brand">Data Center</h3>
-                    <ul class="nav masthead-nav">
-                        <li @click="toCharge"><a href="#">Charge</a></li>
-                        <li @click="toAccount"><a href="#">Account</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div v-if="role_data" class="inner cover" style="overflow: scroll; max-height: 600px">
-                <form onsubmit="return false;" class="form-inline" role="form" style="margin-bottom: 20px">
-                    <button @click="onRefresh" class="btn btn-default">refresh</button>
-                </form>
-                <table class="table table-bordered">
-                    <caption>basic info</caption>
-                    <thead>
-                    <tr>
-                        <th>server_id</th>
-                        <th>role_id</th>
-                        <th>name</th>
-                        <th>platform</th>
-                        <th>log_time</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>{{role_data.role.server_id}}</td>
-                        <td>{{role_data.role.role_id}}</td>
-                        <td style="max-width: 100px">{{role_data.role.name}}</td>
-                        <td>{{role_data.role.platform}}</td>
-                        <td>{{formatTime(role_data.role.log_time)}}</td>
-                    </tr>
-                    </tbody>
-                </table>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Project name</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Dashboard</a></li>
+                <li><a href="#">Settings</a></li>
+                <li><a href="#">Profile</a></li>
+                <li><a href="#">Help</a></li>
+            </ul>
+            <form class="navbar-form navbar-right">
+                <input type="text" class="form-control" placeholder="Search...">
+            </form>
+        </div>
+    </div>
+</nav>
 
-                <table class="table table-bordered">
-                    <caption>create city</caption>
-                    <thead>
-                    <tr>
-                        <th>x</th>
-                        <th>y</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>{{role_data.create_city.x}}</td>
-                        <td>{{role_data.create_city.y}}</td>
-                    </tr>
-                    </tbody>
-                </table>
-                <table class="table table-bordered">
-                    <caption>charge log</caption>
-                    <thead>
-                    <tr>
-                        <th>charge_rmb</th>
-                        <th>log_time</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr v-for="charge in role_data.charges">
-                        <td>{{charge.rmb}}</td>
-                        <td>{{formatTime(charge.log_time)}}</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="mastfoot">
-                <div class="inner">
-                    <p>Created by <a href="#">HuSong</a>.</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+            <ul class="nav nav-sidebar">
+                <li class="active"><a href="#">Overview</a></li>
+                <li><a href="#">Reports</a></li>
+                <li><a href="#">Analytics</a></li>
+                <li><a href="#">Export</a></li>
+            </ul>
+            <ul class="nav nav-sidebar">
+                <li><a href="">Nav item</a></li>
+                <li><a href="">Nav item again</a></li>
+                <li><a href="">One more nav</a></li>
+                <li><a href="">Another nav item</a></li>
+                <li><a href="">More navigation</a></li>
+            </ul>
+            <ul class="nav nav-sidebar">
+                <li><a href="">Nav item again</a></li>
+                <li><a href="">One more nav</a></li>
+                <li><a href="">Another nav item</a></li>
+            </ul>
+        </div>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+            <h1 class="page-header">Dashboard</h1>
+
+            <div class="row placeholders">
+                <div class="col-xs-6 col-sm-3 placeholder">
+                    <img data-src="holder.js/200x200/auto/sky" class="img-responsive" alt="Generic placeholder thumbnail">
+                    <h4>Label</h4>
+                    <span class="text-muted">Something else</span>
                 </div>
+                <div class="col-xs-6 col-sm-3 placeholder">
+                    <img data-src="holder.js/200x200/auto/vine" class="img-responsive" alt="Generic placeholder thumbnail">
+                    <h4>Label</h4>
+                    <span class="text-muted">Something else</span>
+                </div>
+                <div class="col-xs-6 col-sm-3 placeholder">
+                    <img data-src="holder.js/200x200/auto/sky" class="img-responsive" alt="Generic placeholder thumbnail">
+                    <h4>Label</h4>
+                    <span class="text-muted">Something else</span>
+                </div>
+                <div class="col-xs-6 col-sm-3 placeholder">
+                    <img data-src="holder.js/200x200/auto/vine" class="img-responsive" alt="Generic placeholder thumbnail">
+                    <h4>Label</h4>
+                    <span class="text-muted">Something else</span>
+                </div>
+            </div>
+
+            <h2 class="sub-header">Section title</h2>
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Header</th>
+                        <th>Header</th>
+                        <th>Header</th>
+                        <th>Header</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>1,001</td>
+                        <td>Lorem</td>
+                        <td>ipsum</td>
+                        <td>dolor</td>
+                        <td>sit</td>
+                    </tr>
+                    <tr>
+                        <td>1,002</td>
+                        <td>amet</td>
+                        <td>consectetur</td>
+                        <td>adipiscing</td>
+                        <td>elit</td>
+                    </tr>
+                    <tr>
+                        <td>1,003</td>
+                        <td>Integer</td>
+                        <td>nec</td>
+                        <td>odio</td>
+                        <td>Praesent</td>
+                    </tr>
+                    <tr>
+                        <td>1,003</td>
+                        <td>libero</td>
+                        <td>Sed</td>
+                        <td>cursus</td>
+                        <td>ante</td>
+                    </tr>
+                    <tr>
+                        <td>1,004</td>
+                        <td>dapibus</td>
+                        <td>diam</td>
+                        <td>Sed</td>
+                        <td>nisi</td>
+                    </tr>
+                    <tr>
+                        <td>1,005</td>
+                        <td>Nulla</td>
+                        <td>quis</td>
+                        <td>sem</td>
+                        <td>at</td>
+                    </tr>
+                    <tr>
+                        <td>1,006</td>
+                        <td>nibh</td>
+                        <td>elementum</td>
+                        <td>imperdiet</td>
+                        <td>Duis</td>
+                    </tr>
+                    <tr>
+                        <td>1,007</td>
+                        <td>sagittis</td>
+                        <td>ipsum</td>
+                        <td>Praesent</td>
+                        <td>mauris</td>
+                    </tr>
+                    <tr>
+                        <td>1,008</td>
+                        <td>Fusce</td>
+                        <td>nec</td>
+                        <td>tellus</td>
+                        <td>sed</td>
+                    </tr>
+                    <tr>
+                        <td>1,009</td>
+                        <td>augue</td>
+                        <td>semper</td>
+                        <td>porta</td>
+                        <td>Mauris</td>
+                    </tr>
+                    <tr>
+                        <td>1,010</td>
+                        <td>massa</td>
+                        <td>Vestibulum</td>
+                        <td>lacinia</td>
+                        <td>arcu</td>
+                    </tr>
+                    <tr>
+                        <td>1,011</td>
+                        <td>eget</td>
+                        <td>nulla</td>
+                        <td>Class</td>
+                        <td>aptent</td>
+                    </tr>
+                    <tr>
+                        <td>1,012</td>
+                        <td>taciti</td>
+                        <td>sociosqu</td>
+                        <td>ad</td>
+                        <td>litora</td>
+                    </tr>
+                    <tr>
+                        <td>1,013</td>
+                        <td>torquent</td>
+                        <td>per</td>
+                        <td>conubia</td>
+                        <td>nostra</td>
+                    </tr>
+                    <tr>
+                        <td>1,014</td>
+                        <td>per</td>
+                        <td>inceptos</td>
+                        <td>himenaeos</td>
+                        <td>Curabitur</td>
+                    </tr>
+                    <tr>
+                        <td>1,015</td>
+                        <td>sodales</td>
+                        <td>ligula</td>
+                        <td>in</td>
+                        <td>libero</td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
 </div>
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
 <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
 <script src="static/js/bootstrap.min.js"></script>
-<script src="static/vue.min.js"></script>
-<script src="static/vue-resource.min.js"></script>
-<script>
-    const URL_ACCOUNT = "/api/role_detail";
-</script>
-<script>
-    var vm = new Vue({
-        el: "#app",
-        data: {
-            role_data: null
-        },
-        ready: function () {
-            this.onRefresh();
-        },
-        methods: {
-            onRefresh: function () {
-                var _this = this;
-                this.role_data = {};
-                var role_id = this.getQueryString("role_id");
-                var server_id = this.getQueryString("server_id");
-                if(role_id == null || server_id == null) {
-                    return;
-                }
-                this.$http.post(URL_ACCOUNT, {role_id:role_id, server_id:server_id}).then(function (response) {
-                    _this.role_data = response.body;
-                    _this.onFilter();
-                }, function (response) {
-
-                })
-            },
-            formatTime: function (time) {
-                var date = new Date(time * 1000);
-                var hour = date.getHours();
-                hour = hour < 10 ? "0" + hour : hour.toString();
-                var minutes = date.getMinutes();
-                minutes = minutes < 10 ? "0" + minutes : minutes.toString();
-                var month = date.getMonth() + 1;
-                var day = date.getDate();
-                return month + "-" + day + "    " + hour + ":" + minutes;
-            },
-            total: function () {
-                alert("total is " + this.show_data.length);
-            },
-            onFilter() {
-                if (this.filter == "" || this.filter == null) {
-                    this.show_data = this.charge_data;
-                    return;
-                }
-                try {
-                    var filter = JSON.parse(this.filter);
-                    console.log(filter);
-                    this.show_data = this.charge_data.filter(function (item) {
-                        var condition = true;
-                        for (var k in filter) {
-                            console.log(item[k].toString());
-                            if (item[k].toString() != filter[k].toString()) {
-                                condition = false;
-                            }
-                        }
-                        return condition
-                    });
-                }
-                catch (e) {
-                    alert("filter error");
-                    console.log(e);
-                }
-            },
-            getQueryString: function (name) {
-                var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
-                var r = window.location.search.substr(1).match(reg);
-                if (r != null) return unescape(r[2]);
-                return null;
-            },
-            toCharge: function () {
-                window.location.href = "/";
-            }
-        }
-    })
-</script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 </body>
 </html>
