--- a/stastics-vue/index.html
+++ b/stastics-vue/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>stastics-vue</title>
-    <link rel="stylesheet" href="static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/dashboard.css">
+    <!--<link rel="stylesheet" href="static/css/bootstrap.min.css">-->
+    <!--<link rel="stylesheet" href="static/css/dashboard.css">-->
     <style>
       #app {
         height: 100%;
@@ -18,7 +18,7 @@
     </div>
     <!-- built files will be auto injected -->
   </body>
-  <script src="static/js/store.js"></script>
-  <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
-  <script src="static/js/bootstrap.min.js"></script>
+  <!--<script src="static/js/store.js"></script>-->
+  <!--<script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>-->
+  <!--<script src="static/js/bootstrap.min.js"></script>-->
 </html>
