--- a/stastics-vue/index.html
+++ b/stastics-vue/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>stastics-vue</title>
     <!--<link rel="stylesheet" href="static/css/bootstrap.min.css">-->
     <!--<link rel="stylesheet" href="static/css/dashboard.css">-->
