--- a/stastics-vue/index.html
+++ b/stastics-vue/index.html
@@ -16,7 +16,7 @@
     <!--<app></app>-->
     <div id="app">
       <router-view></router-view>
-    </div>
+    </div>r
     <!-- built files will be auto injected -->
   </body>
   <!--<script src="static/js/store.js"></script>-->
